# Karmator

./: .clippy.toml  .gitignore  .gitmodules  Cargo.toml  LICENSE  README.rst  RUNBOOK.rst  TODO.rst  Types.hs  build.rs  build.sh  cabal.sandbox.config  database.hs  karma-parser.hs  karmabot.py  karmabot_chaff_generator.py  karmabot_models.py  karmator.cabal  main.hs  migration.hs  reload_log.py  requirements.txt  runReload.sh  stack.yaml  unique-karma.py
KarmaParser/: karma-parser.hs  karma-test.hs  parser.cfg
KarmaParser/Parser/: Karma.hs  Types.hs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: karma_token_roundtrip.rs  parse_command.rs  parse_karma.rs
hooks/: env  pre-commit  setup
karmator-batches/: Cargo.toml
karmator-batches/src/: main.rs
karmator-bin/: karmator-bin.cabal
karmator-bin/config/: bot.cfg  parser.cfg
karmator-bin/src/: Main.hs  Tests.hs
karmator-bin/src/Plugins/: Channels.hs  Filter.hs  Generic.hs  Karma.hs  Ping.hs  Protype.hs
karmator-bin/src/Plugins/Karma/: Karma.hs  Types.hs
karmator-bin/src/Tests/: KarmaParser.hs  KarmatorRoute.hs
karmator-bot/Plugins/: Generic.hs  Protype-Plugin.hs
karmator-core/: karmator-core.cabal
karmator-core/src/Karmator/: Bot.hs  Route.hs  Server.hs  Types.hs
karmator-core/test/: Tests.hs
karmator-core/test/Tests/: KarmatorRoute.hs
karmator-irc/: karmator-irc.cabal
karmator-irc/src/Karmator/: Filter.hs
karmator-irc/src/Karmator/Server/: IRC.hs
karmator-irc/src/Network/IRC/: Patch.hs
karmator-runs/: Cargo.toml
karmator-rust/: Cargo.toml
karmator-rust/fuzz/: Cargo.toml
karmator-rust/fuzz/fuzz_targets/: karma_token_roundtrip.rs  parse_command.rs  parse_karma.rs
karmator-rust/src/: cache.rs  database.rs  event.rs  lib.rs  main.rs  message.rs  parser.rs  schema_sample.rs  signal.rs  user_database.rs  user_event.rs
karmator-rust/src/bot/: mod.rs  user_database.rs  user_event.rs
karmator-rust/src/bot/parser/: karma.rs  tokenizer.rs
karmator-rust/src/core/: bot.rs  cache.rs  database.rs  event.rs  mod.rs  signal.rs
karmator-rust/src/parser/: command.rs  karma.rs  karma_def.rs  karma_token.rs  mod.rs  santizer.rs  tokenizer.rs
karmator-slack/: karmator-slack.cabal
karmator-slack/src/Karmator/Server/: Slack.hs
karmator-slack/src/Slack/: Message.hs
kcore/: Cargo.toml
kcore/src/: bot.rs  command.rs  connection_state.rs  event.rs  lib.rs  sanitizer.rs  santizer.rs  signal.rs  slack.rs
python/: karmabot.py  karmabot_models.py  karmabot_web.py
schema/: test-v3.sql  v1-fix.sql  v1-triggers.sql  v1-v2.sql  v1.sql  v2-v3.sql  v2.sql  v3-v4.sql  v3.sql  v4-migration.sql  v4.sql
schema/postgres/: v1-permission.sql  v1-triggers.sql  v1.sql
schema/sqlite/: test-v4.sql  v1-v2.sql  v2-v3.sql
src/: Database.hs  DynTest.hs  Main.hs  Migration.hs  database.hs  karmator.hs  lib.rs  main.rs  migration.hs  test.hs
src/KarmaParser/: karma-parser.hs
src/KarmaParser/Parser/: Karma.hs
src/Karmator/: Bot.hs  Filter.hs  Route.hs  Server.hs  Types.hs
src/Plugins/: Karma.hs  Ping.hs  Protype-Plugin.hs
src/Plugins/Karma/: Database.hs  Karma.hs  Test.hs  Types.hs  parser.cfg
src/Plugins/Karma/KarmaParser/: karma-test.hs
src/Test/: KarmaDatabase.hs  KarmaParser.hs
src/binary/: Main.hs  Migration.hs  Tests.hs  bot.cfg
src/binary/Plugins/: Channels.hs  Generic.hs  Karma.hs  Ping.hs
src/binary/Plugins/Karma/: Database.hs  Karma.hs  Types.hs  parser.cfg
src/binary/Tests/: KarmaDatabase.hs  KarmaParser.hs  KarmatorRoute.hs
src/bot/: build_info.rs  migration.rs  mod.rs  tz.rs  user_database.rs  user_event.rs  user_partial.rs  user_top_n.rs
src/bot/parser/: karma.rs  karma_def.rs  karma_token.rs  mod.rs  tokenizer.rs
src/bot/query/: karma.rs  mod.rs  partial.rs  ranking.rs  reacji.rs  top_n.rs
src/core/: bot.rs  cache.rs  command.rs  database.rs  event.rs  mod.rs  santizer.rs  signal.rs  slack.rs
src/karmator/Karmator/: Bot.hs  Config.hs  Filter.hs  Route.hs  Server.hs  State.hs  Types.hs
src/karmator/Karmator/Server/: IRC.hs  Slack.hs
src/karmator/Network/IRC/: Patch.hs
src/parser/: karma.rs  karma_def.rs  karma_token.rs  mod.rs  tokenizer.rs
src/query/: karma.rs  mod.rs  partial.rs  ranking.rs  reacji.rs  top_n.rs
tester/: Cargo.toml
tester/src/: main.rs
tests/: KarmaParser.hs  KarmatorRoute.hs
