[package]
name = "karmator-rust"
version = "8.4.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2021"
build = "build.rs"

[build-dependencies]
built = { version = "0.6", features = ["chrono", "git2"] }

[dev-dependencies]
http = "0.2"

[profile.release]
lto = "thin"

[dependencies]
reqwest = { version = "0.11", features = ["json"] }
tokio-tungstenite = { version = "0.13", features = ["connect", "tls", "stream"] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures-util = "0.3"
futures = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
dashmap = "5"

# Message Ids
atomic-counter = "1"

# For timezone + postgresql
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.8"

# For karma parsing
nom = "7"
unicode-normalization = "0.1"
unicase = "2.6"

# For fuzzing
arbitrary = { version = "1.3", optional = true, features = ["derive"] }

# Postgresql
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
bytes = "1.8.0"

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
anyhow = "1.0"
