[package]
name = "karmator"
version = "9.0.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2021"
build = "build.rs"

[profile.release]
lto = "thin"

[workspace]

[build-dependencies]
built = { version = "0.6", features = ["chrono", "git2"] }

[dependencies]
# Core library for the bot
kcore = { path = "kcore" }

tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# For timezone + postgresql
chrono = { version = "0.4", default-features = false, features = ["clock"] }
chrono-tz = "0.8"

# Postgresql
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4"] }
tokio-postgres-rustls = "0.13"
rustls = "0.23"
bytes = "1.8.0"

# For karma parsing
nom = "7"
unicode-normalization = "0.1"
unicase = "2.6"

# For karma fuzzing
arbitrary = { version = "1.4", optional = true, features = ["derive"] }

# Logging
env_logger = "0.11"
log = "0.4"

# Error handling
#anyhow = "1.0"
