name:                karmator
version:             0.1.0.0
synopsis:            An IRC bot written in Haskell
-- description:
homepage:            https://github.com/pharaun/Karmator
license:             BSD3
license-file:        LICENSE
author:              Anja Berens
maintainer:          pharaun666@gmail.com
-- copyright:
category:            Network
build-type:          Simple
extra-source-files:  README.rst
cabal-version:       >=1.10

executable karmator
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts
  hs-source-dirs:      src
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.8
                     , attoparsec
                     , bytestring >= 0.10
                     , monads-tf >= 0.1
                     , text
                     , transformers >=0.4 && <0.5
                     , free
                     , pretty
                     , async
                     , stm
                     -- Irc
                     , irc >= 0.6
                     -- Pipes
                     , pipes
                     , pipes-attoparsec >= 0.4.0
                     , pipes-network
                     , pipes-network-tls >= 0.3
                     -- Network/TLS
                     , network >= 2.5
                     , network-simple-tls >= 0.3
                     , tls >= 1.2.2
                     , x509-system

                     -- Persistent
                     , scientific
                     , esqueleto
                     , persistent
                     , persistent-template
                     , persistent-sqlite

                     -- Timezone updates
                     , timezone-olson
                     , timezone-series
                     , time
                     , old-time

executable migration
  main-is:             Migration.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts
  hs-source-dirs:      src
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.8
                     , bytestring >= 0.10
                     , transformers >=0.4 && <0.5
                     , text

                     -- Persistent
                     , scientific
                     , esqueleto
                     , persistent
                     , persistent-sqlite
                     , persistent-template
                     , conduit

                     -- Timezone updates
                     , timezone-olson
                     , timezone-series
                     , time
