name:                karmator
author:              Anja Berens
maintainer:          pharaun666@gmail.com
copyright:           (c) Anja Berens
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
category:            Network
synopsis:            An IRC bot written in Haskell
homepage:            https://github.com/pharaun/Karmator
-- description:
extra-source-files:  README.rst
                     karmator-bot/Plugins/Karma/parser.cfg
                     schema/*.sql

source-repository head
  type:     git
  location: https://github.com/pharaun/Karmator.git
  branch:   master

library
  exposed-modules:     Karmator.Bot
                       Karmator.Filter
                       Karmator.Route
                       Karmator.Server
                       Karmator.Types
                       Network.IRC.Patch
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts -threaded
  hs-source-dirs:      src/karmator
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.8
                     -- TODO: Working around aeson not handling something here
                     , scientific  < 0.3.3.1
                     , async
                     , attoparsec
                     , bytestring >= 0.10
                     , text
                     , transformers >=0.4 && <0.5
                     , mtl
                     , free
                     , irc >= 0.6
                     , mtl
                     , network >= 2.5
                     , network-simple-tls >= 0.3
                     , pipes
                     , pipes-attoparsec >= 0.4.0
                     , pipes-network
                     , pipes-network-tls >= 0.3
                     , pretty
                     , stm
                     , tls >= 1.2.2
                     , transformers >=0.4 && <0.5
                     , x509-system
                     , errors >= 1.4.0
                     , safe >= 0.3
                     , exceptions >= 0.6

executable karmator
  other-modules:       Plugins.Generic
                       Plugins.Karma
                       Plugins.Karma.Database
                       Plugins.Karma.Karma
                       Plugins.Karma.Types
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts -threaded
  hs-source-dirs:      src/binary
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.8
                     , karmator

                     , ConfigFile
                     , bytestring >= 0.10
                     , esqueleto >= 2.2.4
                     , formatting
                     , irc >= 0.6
                     , monad-logger
                     , mtl
                     , network >= 2.5
                     , network-simple-tls >= 0.3
                     , old-time
                     , parsec
                     , persistent >=2.1.1.7 && <2.2
                     , persistent-sqlite < 2.2
                     , persistent-template >= 2.0
                     , text >= 1.2.0.0
                     , time
                     , tls >= 1.2.2
                     , transformers >=0.4 && <0.5
                     , x509-system
                     , x509-validation
                     , optparse-applicative
                     , base16-bytestring

executable migration
  main-is:             Migration.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts -threaded
  hs-source-dirs:      src/binary
  extra-libraries:     pthread
  build-depends:       base >=4.5 && <4.8
                     , conduit
                     , persistent >=2.1.1.7 && <2.2
                     , persistent-sqlite < 2.2
                     , persistent-template >= 2.0
                     , text
                     , timezone-olson
                     , timezone-series
                     , transformers >=0.4 && <0.5

test-suite karmator-tests
  main-is:             Tests.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts -threaded
  hs-source-dirs:      src/binary
  extra-libraries:     pthread
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.5 && <4.8
                     , karmator
                     , bytestring >= 0.10
                     , irc >= 0.6
                     , transformers >=0.4 && <0.5
                     , parsec
                     , text
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2

