name:                karmator-bin
author:              Anja Berens
maintainer:          pharaun666@gmail.com
copyright:           (c) Anja Berens
version:             0.5.0.0
license:             BSD3
--license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
category:            Network
synopsis:            The actual current bot (Karmator itself)
homepage:            https://github.com/pharaun/Karmator

source-repository head
  type:     git
  location: https://github.com/pharaun/Karmator.git
  branch:   master

executable karmator
  other-modules:       Plugins.Generic
                       Plugins.Ping
                       Plugins.Channels
                       Plugins.Karma
                       Plugins.Karma.Database
                       Plugins.Karma.Karma
                       Plugins.Karma.Types
                       Paths_karmator_bin
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts
  hs-source-dirs:      src
  extra-libraries:     pthread
  build-depends:       base >=4.5
                     , karmator-core
                     , karmator-irc
                     , karmator-slack

                     , ConfigFile
                     , bytestring >= 0.10
                     , utf8-string
                     , containers
                     , esqueleto >= 2.2.4
                     , formatting
                     , irc >= 0.6
                     , monad-logger
                     , mtl
                     , network >= 2.5
                     , network-simple-tls >= 0.5
                     , old-time
                     , old-locale
                     , parsec
                     , persistent >=2.1.1.7
                     , persistent-sqlite
                     , persistent-template >= 2.0
                     , text >= 1.2.0.0
                     , time
                     , tls >= 1.3
                     , transformers >=0.4
                     , optparse-applicative
                     , base16-bytestring
                     , split
                     , template-haskell
                     , stm
                     , stm-delay

                     -- Builds
                     , gitrev

test-suite karmator-bin-tests
  other-modules:       Plugins.Karma.Karma
                       Plugins.Karma.Types
                       Tests.KarmaParser
  main-is:             Tests.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts
  hs-source-dirs:      src
  extra-libraries:     pthread
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.5
                     , karmator
                     , bytestring >= 0.10
                     , irc >= 0.6
                     , transformers >=0.4
                     , parsec
                     , text
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2

