name:                karmator-core
author:              Anja Berens
maintainer:          pharaun666@gmail.com
copyright:           (c) Anja Berens
version:             0.5.0.0
license:             BSD3
--license-file:        LICENSE
build-type:          Simple
cabal-version:       >=1.10
category:            Network
synopsis:            Core of karmator - handles all of the routing + config + state management.
homepage:            https://github.com/pharaun/Karmator

source-repository head
  type:     git
  location: https://github.com/pharaun/Karmator.git
  branch:   master

library
  exposed-modules:     Karmator.Bot
                       Karmator.Filter
                       Karmator.Route
                       Karmator.Types
                       Karmator.State
                       Karmator.Config
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2
  hs-source-dirs:      src
  extra-libraries:     pthread
  build-depends:       base >=4.5
                     , async
                     , attoparsec
                     , bytestring >= 0.10
                     , utf8-string
                     , text >= 1.2.0.0
                     , free
                     , irc >= 0.6
                     , mtl
                     , network >= 2.5
                     , network-simple-tls >= 0.5
                     , pipes
                     , pipes-attoparsec >= 0.4.0
                     , pipes-network >= 0.7
                     , pipes-network-tls >= 0.4
                     , pretty
                     , stm
                     , tls >= 1.3
                     , transformers >=0.4
                     , x509-system
                     , errors >= 1.4.0
                     , safe >= 0.3
                     , exceptions >= 0.6
                     -- Stateful management stuff
                     , persistent >=2.1.1.7
                     , persistent-sqlite
                     , persistent-template >= 2.0
                     -- Slack bits
                     , slack-api
                     -- Config files
                     , ConfigFile
                     , containers
                     , x509-system
                     , x509-validation
                     , base16-bytestring

test-suite karmator-core-tests
  other-modules:       Tests.KarmatorRoute
  main-is:             Tests.hs
  default-language:    Haskell2010
  ghc-options:        -Wall -fno-warn-missing-signatures -O2 -rtsopts -threaded
  hs-source-dirs:      test
  extra-libraries:     pthread
  type:                exitcode-stdio-1.0
  build-depends:       base >=4.5
                     , karmator-core
                     , bytestring >= 0.10
                     , irc >= 0.6
                     , transformers >=0.4
                     , parsec
                     , text
                     , HUnit
                     , QuickCheck
                     , test-framework
                     , test-framework-hunit
                     , test-framework-quickcheck2

