[package]
name = "karmator-rust"
version = "7.0.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2018"

[dependencies]
slack_api = "0.23.0"
tokio-tungstenite = { version = "0.11.0", features = ["connect", "tls", "stream"] }
tokio = { version = "0.2.22", features = ["full"] }
futures-util = "0.3.8"

# Message Ids
atomic-counter = "1.0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

governor = "0.3.1"
nom = "6"


# rusqlite = { version = "~0.19.0", features = [ "bundled" ] }
# r2d2/bb8 for providing async driver for rusqlite
# https://activesphere.com/blog/2018/12/24/understanding-sqlite-busy

# consider storing the configuration in sqlite itself
# toml = "0.5.7"
