[package]
name = "karmator-rust"
version = "7.0.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
built = { version = "0.4", features = ["chrono", "git2"] }

[dependencies]
slack_api = "0.23.0"
tokio-tungstenite = { version = "0.11.0", features = ["connect", "tls", "stream"] }
tokio = { version = "0.2.22", features = ["full"] }
futures-util = "0.3.8"
futures = "0.3.7"
futures-timer = "3.0.2"

# Message Ids
atomic-counter = "1.0.1"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

chrono = "0.4"
humantime = "2"
dashmap = "3"
nom = "6"

rusqlite = { version = "0.24.1", features = ["bundled"] }

# For karma parsing
unicode-normalization = "0.1.16"
unicase = "2.6.0"

# For fuzzing
arbitrary = { version = "0.4", optional = true, features = ["derive"] }

# governor = "0.3.1"
# consider storing the configuration in sqlite itself
# toml = "0.5.7"
