[package]
name = "kcore"
version = "9.0.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2021"

[dev-dependencies]
http = "0.2"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# Slack websocket api
tokio-tungstenite = { version = "0.13", features = ["connect", "tls", "stream"] }

# Slack web api
reqwest = { version = "0.11", features = ["json"] }
quick_cache = { version = "0.6", default-features = false, features = ["ahash"] }

# Message Ids
atomic-counter = "1"

# Logging
log = "0.4"

# Command parsing
nom = "7"

# Error handling
anyhow = "1.0"
