[package]
name = "kcore"
version = "9.0.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
edition = "2021"

[lints]
workspace = true

[dev-dependencies]
http = "1.2"

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures-util = "0.3"

# Slack websocket api - native is the other option to webpki
tokio-tungstenite = { version = "0.29", features = ["connect", "rustls-tls-webpki-roots", "stream"] }

# Slack web api
reqwest = { version = "0.13", features = ["json", "query"] }
quick_cache = { version = "0.6", default-features = false, features = ["ahash"] }

# Logging
log = "0.4"

# Command parsing
nom = "8"

# Error handling
anyhow = "1"
