[package]
name = "karmator-tester"
version = "0.1.0"
authors = ["Anja Berens <pharaun666@gmail.com>"]
publish = false
edition = "2021"

# Prevent this from interfering with workspaces
[workspace]
members = ["."]

[dependencies]
kcore = { path = "../kcore" }
karmator = { path = "../" }

# Libraries to support the tester
http = "1.2"
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4"] }
tokio-tungstenite = { version = "0.13", features = ["connect", "tls", "stream"] }
futures-util = "0.3"
reqwest = { version = "0.12", features = ["json"] }
log = "0.4"
anyhow = "1"
rustyline-async = "0.4"
simplelog = "0.12"
serde_json = "1"
